--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ RECAPTCHA_SITEKEY=6LcgC08eAAAAAOb64MLmtbGj3Cel8_UAchI5GzWC
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ignou
+DB_DATABASE=starter
 DB_USERNAME=root
 DB_PASSWORD=
 
